--- a/accouma_front/views/index.html
+++ b/accouma_front/views/index.html
@@ -2,8 +2,12 @@
 <html>
   <head>
     <title>Accouma</title>
+    <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Accouma</h1>
+    <section id="general">
+      <h1>Accouma</h1>
+    </section>
+    <script src="js/bundle.js" type="text/javascript"></script>
   </body>
 </html>
