Firsth login screen and login styles

--- a/accouma_front/dev/login/login.less
+++ b/accouma_front/dev/login/login.less
@@ -1,8 +1,16 @@
 .login{
-  width: 50%;
-  margin: 10px 25%;
-  .login-field{
-    margin-top: 10px;
-    margin-bottom: 10px;
+  flex: 1;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: url('../images/main/background.jpg') no-repeat center;
+  .login-form{
+    width: 50%;
+    margin: 0px 25%;
+    .login-field{
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
   }
 }
