--- a/accouma_front/dev/style.less
+++ b/accouma_front/dev/style.less
@@ -1,4 +1,15 @@
+html, body{
+  height: 100%;
+}
+body{
+  margin: 0px;
+}
+
 #general{
+  min-height: 100%;
+  display: block;
+  display: flex;
+  flex-direction: column;
   #menus{
     background: blue;
   }
