apply some basic styles

--- a/accouma_front/dev/login/login.less
+++ b/accouma_front/dev/login/login.less
@@ -9,8 +9,13 @@
 	-o-background-size: cover;
 	background-size: cover;
   .login-form{
+    min-width: 250px;
     max-width: 300px;
     margin: 0px auto;
+    .login-title{
+      margin: 0px;
+      padding: 10px;
+    }
     .login-field{
       margin-top: 10px;
       margin-bottom: 10px;
