--- a/accouma_front/views/index.html
+++ b/accouma_front/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Accouma</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
