start transition to material with materialize

--- a/accouma_front/dev/common/general.less
+++ b/accouma_front/dev/common/general.less
@@ -8,11 +8,13 @@
     .general-block{
       .flexColumn;
       .general-cards{
-        .flexRow;
-        flex-wrap: wrap;
         .general-card{
-          .flex(1 1 ~"calc(33% - 20px)");
-          margin: 10px;
+          .card-action{
+            padding: 10px;
+          }
+          .general-cardIconButton{
+            padding: 0px;
+          }
         }
       }
     }
