--- a/accouma_front/views/index.html
+++ b/accouma_front/views/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Accouma</title>
+    <!--<link type="text/css" rel="stylesheet" href="css/materialize.min.css" />-->
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
     <section id="general">
     </section>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.min.js" type="text/javascript"></script>
     <script src="js/bundle.js" type="text/javascript"></script>
   </body>
 </html>
