--- a/accouma_front/dev/navBar/navBar.less
+++ b/accouma_front/dev/navBar/navBar.less
@@ -1,6 +1,6 @@
 .navBar{
   .flexRow;
-  background: @black;
+  background: @greenDark;
   color: @white;
   .navBar-iconContainer{
     padding: 0px 10px;
@@ -12,5 +12,8 @@
       font-size: 32px;
       line-height: 64px;
     }
+  }
+  .navBar-optionsContainer{
+    padding: 0px 10px;
   }
 }
