--- a/accouma_front/dev/login/login.less
+++ b/accouma_front/dev/login/login.less
@@ -9,6 +9,7 @@
 	-o-background-size: cover;
 	background-size: cover;
   .login-form{
+    background: @white;
     min-width: 250px;
     max-width: 300px;
     margin: 0px auto;
@@ -17,8 +18,6 @@
       padding: 10px;
     }
     .login-field{
-      margin-top: 10px;
-      margin-bottom: 10px;
     }
   }
 }
