refactor building structure

--- a/accouma_front/dev/login/login.less
+++ b/accouma_front/dev/login/login.less
@@ -3,7 +3,7 @@
   padding: 10px;
   .flexColumn;
   justify-content: center;
-  background: url('../images/main/background.jpg') fixed center no-repeat;
+  background: url('../../images/main/background.jpg') fixed center no-repeat;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
