--- a/accouma_front/dev/sideBar/sideBar.scss
+++ b/accouma_front/dev/sideBar/sideBar.scss
@@ -1,12 +1,12 @@
 .sideBar{
-  .flexColumn;
-  background: @black;
-  color: @white;
+  @include flexColumn;
+  background: $black;
+  color: $white;
   width: 50px;
   .sideBar-icon{
     display: block;
     text-align: center;
     padding: 5px 0px;
-    color: @white;
+    color: $white;
   }
 }
