--- a/accouma_front/views/index.html
+++ b/accouma_front/views/index.html
@@ -7,7 +7,7 @@
     <link href="/build/css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <section id="general">
+    <section id="general" class="general">
     </section>
     <script type="text/javascript" src="/vendor/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="/vendor/js/materialize.min.js"></script>
