--- a/accouma_front/dev/login/login.scss
+++ b/accouma_front/dev/login/login.scss
@@ -1,23 +1,26 @@
-.login{
+.login {
   @include flex();
-  padding: 10px;
   @include flexColumn;
-  justify-content: center;
   background: url('../../images/main/background.jpg') fixed center no-repeat;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-  .login-form{
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
+  justify-content: center;
+  padding: 10px;
+
+  .login-form {
     background: $white;
-    min-width: 250px;
+    margin: 0 auto;
     max-width: 300px;
-    margin: 0px auto;
-    .login-title{
-      margin: 0px;
-      padding: 10px;
-    }
-    .login-field{
-    }
+    min-width: 250px;
+  }
+
+  .login-title {
+    margin: 0;
+    padding: 10px;
+  }
+
+  .login-field {
   }
 }
