refactor on login and linting something

--- a/accouma_front/dev/login/login.scss
+++ b/accouma_front/dev/login/login.scss
@@ -1,6 +1,7 @@
 .login {
   @include flex();
   @include flexColumn;
+  @include calcMinHeight(100vh, 0px);
   background: url('../../images/main/background.jpg') fixed center no-repeat;
   -moz-background-size: cover;
   -o-background-size: cover;
