--- a/accouma_front/dev/views/index.html
+++ b/accouma_front/dev/views/index.html
@@ -4,13 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Accouma</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="/build/css/style.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
   </head>
   <body>
     <section id="general" class="general">
     </section>
-    <script type="text/javascript" src="/vendor/js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="/vendor/js/materialize.min.js"></script>
-    <script type="text/javascript" src="/build/js/bundle.js"></script>
+    <script type="text/javascript" src="./vendor/js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="./vendor/js/materialize.min.js"></script>
+    <script type="text/javascript" src="./js/bundle.js"></script>
   </body>
 </html>
