--- a/accouma_front/dev/views/index.html
+++ b/accouma_front/dev/views/index.html
@@ -8,6 +8,22 @@
   </head>
   <body>
     <section id="general" class="general">
+    <style type="text/css">
+      .intro{
+        background: #454F79;
+        min-height: 100vh;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+      .intro-title{
+        text-align: center;
+      }
+    </style>
+      <div class="intro">
+        <h1 class="intro-title">ACCOUMA</h1>
+      </div>
     </section>
     <script type="text/javascript" src="./vendor/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="./vendor/js/materialize.min.js"></script>
