--- a/accouma_front/dev/style.scss
+++ b/accouma_front/dev/style.scss
@@ -83,6 +83,7 @@ $black: #323232;
 
 @import 'common/general';
 @import 'common/cards';
+@import 'utils/loader';
 @import 'components/home/home';
 @import 'components/navBar/navBar';
 @import 'components/sideBar/sideBar';
