--- a/accouma_front/dev/components/sideBar/sideBar.scss
+++ b/accouma_front/dev/components/sideBar/sideBar.scss
@@ -1,8 +1,12 @@
 .sidebar {
   @include flexColumn;
+  @include calcHeight(100%, 64px);
   background: $black;
   color: $white;
   width: 50px;
+  position: fixed;
+  z-index: 10;
+  overflow-y: auto;
 
   .sidebar-icon {
     color: $white;
