--- a/accouma_front/dev/utils/loader.scss
+++ b/accouma_front/dev/utils/loader.scss
@@ -1,7 +1,8 @@
 .loader{
   position: fixed;
+  top: 0px;
   width: 100%;
   height: 100vh;
   background: url('../images/main/loading.gif') no-repeat center center rgba(69, 79, 121, 0.6);
-  z-index: 3;
+  z-index: 200;
 }
