back loader, while component is loaded

--- a/accouma_front/dev/style.scss
+++ b/accouma_front/dev/style.scss
@@ -7,6 +7,7 @@
 @import 'common/cards';
 
 @import 'utils/loader';
+@import 'utils/backLoader';
 
 @import 'components/home/home';
 @import 'components/navBar/navBar';
