styles for new user overlay

--- a/accouma_front/dev/style.scss
+++ b/accouma_front/dev/style.scss
@@ -4,7 +4,9 @@
 @import 'common/mixins';
 @import 'common/main';
 @import 'common/general';
+@import 'common/sectionOverlay';
 @import 'common/cards';
+@import 'common/buttons';
 
 @import 'utils/loader';
 @import 'utils/backLoader';
