update sass vars

--- a/accouma_front/dev/style.scss
+++ b/accouma_front/dev/style.scss
@@ -1,6 +1,7 @@
 @import 'vendor/css/materialize.min';
 
 @import 'common/globals';
+@import 'common/colors';
 @import 'common/mixins';
 @import 'common/main';
 @import 'common/general';
