--- a/accouma_front/dev/common/sectionOverlay.scss
+++ b/accouma_front/dev/common/sectionOverlay.scss
@@ -4,7 +4,7 @@
   left: 0px;
   width: 100%;
   height: 100%;
-  background: rgba(128, 0, 128, 0.8);
+  background: $mainAlphaBackground;
   overflow-y: auto;
   z-index: 101;
 }
