--- a/accouma_front/dev/utils/loader.scss
+++ b/accouma_front/dev/utils/loader.scss
@@ -3,6 +3,6 @@
   top: 0px;
   width: 100%;
   height: 100vh;
-  background: url('../images/main/loading.gif') no-repeat center center rgba(69, 79, 121, 0.6);
+  background: url('../images/main/loading.gif') no-repeat center center $mainAlphaBackground;
   z-index: 200;
 }
