new users styles

--- a/accouma_front/dev/common/colors.scss
+++ b/accouma_front/dev/common/colors.scss
@@ -1,5 +1,6 @@
 $mainBackground: #454F79;
-$mainAlphaBackground: rgba($mainBackground, 0.8);
+$loderAlphaBackground: rgba($mainBackground, 0.8);
+$mainAlphaBackground: rgba($mainBackground, 0.95);
 
 $white: #ffffff;
 $greenDark: #273238;
