--- a/accouma_front/dev/common/sectionOverlay.scss
+++ b/accouma_front/dev/common/sectionOverlay.scss
@@ -1,4 +1,5 @@
 .section-overlay{
+  @include flexColumn;
   position: fixed;
   top: 0px;
   left: 0px;
@@ -7,4 +8,13 @@
   background: $mainAlphaBackground;
   overflow-y: auto;
   z-index: 101;
+  .section-overlay-head{
+    @include flexRow;
+    .section-overlay-title{
+      @include flex();
+    }
+  }
+  .section-overlay-body{
+    @include flex();
+  }
 }
