--- a/accouma_front/dev/style.scss
+++ b/accouma_front/dev/style.scss
@@ -8,9 +8,8 @@
 @import 'common/sectionOverlay';
 @import 'common/cards';
 @import 'common/buttons';
-
-@import 'utils/loader';
-@import 'utils/backLoader';
+@import 'common/loader';
+@import 'common/backLoader';
 
 @import 'components/home/home';
 @import 'components/navBar/navBar';
