--- a/accouma_front/dev/style.scss
+++ b/accouma_front/dev/style.scss
@@ -5,6 +5,7 @@
 @import 'common/mixins';
 @import 'common/main';
 @import 'common/general';
+@import 'common/backdrop';
 @import 'common/sectionOverlay';
 @import 'common/cards';
 @import 'common/buttons';
