--- a/accouma_front/dev/common/loader.scss
+++ b/accouma_front/dev/common/loader.scss
@@ -1,8 +1,5 @@
 .loader{
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  height: 100vh;
+  @include backFixed;
   background: url('../images/main/loading.gif') no-repeat center center $loderAlphaBackground;
   z-index: 200;
 }
