--- a/accouma_front/dev/common/mixins.scss
+++ b/accouma_front/dev/common/mixins.scss
@@ -53,3 +53,11 @@
   -moz-border-radius: $r;
   border-radius: $r;
 }
+
+@mixin backFixed {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
