loader styles and some components

--- a/accouma_front/dev/components/login/login.scss
+++ b/accouma_front/dev/components/login/login.scss
@@ -13,6 +13,7 @@
   .login-form {
     background: $white;
     margin: 0 auto;
+    padding: 10px 0px;
     max-width: 300px;
     min-width: 250px;
   }
