--- a/accouma_front/dev/style.scss
+++ b/accouma_front/dev/style.scss
@@ -10,7 +10,9 @@
 @import 'common/cards';
 @import 'common/buttons';
 @import 'common/loader';
+@import 'common/innerLoader';
 @import 'common/backLoader';
+@import 'common/voidState';
 
 @import 'components/home/home';
 @import 'components/navBar/navBar';
