--- a/accouma_front/dev/common/globals.scss
+++ b/accouma_front/dev/common/globals.scss
@@ -1,1 +1,9 @@
 $navHeight: 64px;
+
+@function getImageUrl() {
+  @if $useLocalConfig == 0 {
+    @return $IMAGES_URL;
+  } @else {
+    @return $LOCAL_IMAGES_URL;
+  }
+}
